Más testing
Update api-docs.yaml
